--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - sudo apt-get update -qq
   - > 
       sudo apt-get install --no-install-recommends -qq 
-      libpcre-dev
+      libpcre3-dev
       libssl-dev
       libjson0-dev
       libxml2-dev
