--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,31 @@ compiler:
   - gcc
   - clang
 
+env:
+  global:
+    - secure: "hPCTj2kur2-ItRU0mZdDKA"
+
+addons:
+  coverity_scan:
+    project:
+      name: steve-morgan/clamav-devel
+      version: 0.99
+      description: ClamAV
+    notification_email: stevmorg@cisco.com
+    build_command_prepend: ./configure
+    build_command: make
+    branch_pattern: coverity_scan
+
+before_install:
+  - sudo apt-get update -qq
+  - > 
+      sudo apt-get install --no-install-recommends -qq 
+      libpcre3-dev
+      libssl-dev
+      libjson0-dev
+      libxml2-dev
+      check
+      zlib1g-dev
+
+install: ./configure --enable-check --with-libjson
+script: if [ ${COVERITY_SCAN_BRANCH} != 1 ]; then make check; fi
